# fscm-api

./: .editorconfig  .env  .env.production  .gitignore  Cargo.toml  README.md  config.json  database.sqlite3  deploy.sh  diesel.toml
api/: Cargo.toml
api/migrations/2025-05-06-015441_create_events/: down.sql  up.sql
api/migrations/2025-05-06-015506_create_events_subtypes/: down.sql  up.sql
api/src/: main.rs  schema.rs
cli/: Cargo.toml  diesel.toml
cli/migrations/2025-05-14-015539_create_subtypes/: down.sql  up.sql
cli/migrations/2025-05-14-015553_create_events/: up.sql
cli/migrations/2025-05-14-015647_create_events_subtypes/: down.sql
cli/migrations/2025-05-31-022704_seed_events_001/: up.sql
cli/migrations/2025-05-31-030624_seed_types_001/: up.sql
cli/migrations/2025-05-31-030631_seed_subtypes_001/: up.sql
cli/migrations/2025-05-31-030638_seed_events_subtypes_001/: up.sql
cli/migrations/2025-06-02-022345_seed_events20250601/: up.sql
cli/migrations/2025-06-02-022357_seed_events_subtypes20250601/: up.sql
cli/migrations/2025-06-04-021744_create_events_seed202050603/: up.sql
cli/migrations/2025-06-04-021758_create_events_subtypes_seed202050603/: up.sql
cli/migrations/2025-06-04-021811_create_types_seed202050603/: up.sql
cli/migrations/2025-06-04-021837_create_subtypes_seed202050603/: up.sql
cli/src/: lib.rs  main.rs  model.rs  settings.rs
cli/src/api/: mod.rs  v1.rs
cli/src/api/handlers/: events.rs  hello.rs  (+3 more)
cli/src/commands/: hello.rs  mod.rs  serve.rs
cli/src/db/: events.rs  mod.rs  subtypes.rs  types.rs
cli/src/state/: mod.rs
(+22 files in other folders)
