[package]
name = "fscm-api"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "api",
  "cli"
]

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
anyhow = "1.0.98"
tower-http = { version = "0.6.2", features = ["catch-panic"] }
