[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = "4.5.37"
config = "0.15.11"
diesel = { version = "2.2.10", features = ["r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
